# jrrd

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  Makefile.am  autogen.sh  changelog  config.h.cmake  configure.ac  control  control.in  dirs  jrrd.spec.in  pom.xml  pom.xml.in  rrd_jinterface.c  rules  version.m4
debian/: changelog  control.in  copyright
org/opennms/netmgt/rrd/rrdtool/: Interface.java
